comanda e ajustes
