# server.js
@@ -14,6 +14,7 @@ import pessoaRoute from './routes/pessoaRoute.js';
 import agendaRoute from './routes/agendaRoute.js';
 import bloqueioRoute from './routes/bloqueioRoute.js';
 import disponibilidadeRoute from './routes/disponibilidadeRoute.js';
+import comandaRoute from './routes/comandaRoute.js';
 
 const require = createRequire(import.meta.url);
 const outputJson = require("./swaggerOutput.json");
@@ -40,6 +41,7 @@ server.use("/pessoas", pessoaRoute);
 server.use("/agendamentos", agendaRoute);
 server.use("/bloqueios", bloqueioRoute);
 server.use("/disponibilidade", disponibilidadeRoute);
+server.use("/comandas", comandaRoute);
 
 server.listen(PORT, function() {
     console.log(`backend em funcionamento na porta ${PORT}!`);
